--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@angular/elements": "^13.3.1",
     "@angular/forms": "^13.3.1",
     "@angular/localize": "13.3.1",
-    "@angular/platform-browser": "^13.3.1",
+    "@angular/platform-browser": "^13.4.0",
     "@angular/platform-browser-dynamic": "^13.3.1",
     "@angular/router": "^13.3.1",
     "@ng-bootstrap/ng-bootstrap": "12.0.1",
     "@popperjs/core": "^2.11.4",
+    "angular-calendar": "^0.31.0",
+    "date-fns": "^3.3.1",
     "jw-bootstrap-switch-ng2": "2.0.5",
     "moment": "^2.29.1",
     "ng2-nouislider": "1.8.3",
@@ -34,14 +36,14 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^13.3.1",
-    "@angular/cli": "^13.3.1",
+    "@angular-devkit/build-angular": "^17.2.0",
+    "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^13.3.1",
     "@angular/language-service": "13.3.1",
     "@types/jasmine": "~3.10.3",
     "@types/jasminewd2": "~2.0.10",
     "@types/node": "16.3.2",
-    "codelyzer": "6.0.2",
+    "codelyzer": "^0.0.28",
     "jasmine-core": "~4.0.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "^6.3.17",
@@ -50,7 +52,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "protractor": "7.0.0",
+    "protractor": "^7.0.0",
     "ts-node": "~10.7.0",
     "tslint": "6.1.3",
     "typescript": "~4.4.2"
